# aws_cicd

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  requirements.txt
.github/templates/: app-env.template  service_file.template
.github/workflows/: cd.yml  ci.yml  main.yml  terraform.yml
src/: 404.html  lib.rs  main.rs  serve.py
terraform/: main.tf  outputs.tf  providers.tf
tests/: __init__.py  test_serve.py
