[package]
name = "aws_cicd"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.17"
aws-sdk-dynamodb = "1.67.0"
lambda_runtime = "0.13.0"
lambda_http = "0.14.0"
log = "0.4.26"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"]}
uuid = { version = "1.15.1", features = ["v4"]}

